--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-gradio>=4.0.0
-requests>=2.31.0
-torch>=2.0.0
-transformers>=4.35.0
-soundfile>=0.12.1
-numpy>=1.24.0
-librosa>=0.11.0
-torchaudio>=2.0.0
-safetensors>=0.5.3
-TTS>=0.22.0
-cython>=3.0.0 
+gradio
+requests
+torch
+soundfile
+transformers
 chatterbox-tts
+selenium
+webdriver-manager
+geckodriver  # For Firefox WebDriver
