--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,22 @@
 absl-py==2.3.0
 aiofiles==24.1.0
 aiohappyeyeballs==2.6.1
-aiohttp==3.12.12
+aiohttp==3.12.13
 aiosignal==1.3.2
 annotated-types==0.7.0
-antlr4-python3-runtime==4.9.3
 anyascii==0.3.2
 anyio==4.9.0
+argon2-cffi==25.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==3.0.0
+async-lru==2.0.5
 attrs==25.3.0
 audioread==3.0.1
 babel==2.17.0
 bangla==0.0.5
+beautifulsoup4==4.13.4
+bleach==6.2.0
 blinker==1.9.0
 blis==1.2.1
 bnnumerizer==0.0.2
@@ -20,11 +26,10 @@ certifi==2025.6.15
 cffi==1.17.1
 cfgv==3.4.0
 charset-normalizer==3.4.2
-chatterbox-tts==0.1.2
 click==8.2.1
 cloudpathlib==0.21.1
+comm==0.2.2
 confection==0.1.5
-conformer==0.3.2
 contourpy==1.3.2
 coqpit==0.0.17
 cycler==0.12.1
@@ -32,32 +37,35 @@ cymem==2.0.11
 Cython==3.1.2
 datasets==3.6.0
 dateparser==1.1.8
+debugpy==1.8.14
 decorator==5.2.1
-diffusers==0.29.0
+defusedxml==0.7.1
 dill==0.3.8
 distlib==0.3.9
 docopt==0.6.2
 einops==0.8.1
 encodec==0.1.1
-fastapi==0.115.12
+executing==2.2.0
+fastapi==0.115.13
+fastjsonschema==2.21.1
 ffmpy==0.6.0
 filelock==3.18.0
 Flask==3.1.1
-fonttools==4.58.2
+fonttools==4.58.4
+fqdn==1.5.1
 frozenlist==1.7.0
-fsspec==2025.5.1
+fsspec==2025.3.0
 g2pkk==0.1.2
-geckodriver==0.0.1
 gradio==5.34.0
 gradio_client==1.10.3
 groovy==0.1.2
 grpcio==1.73.0
 gruut==2.2.3
 gruut-ipa==0.13.0
-gruut_lang_de==2.0.1
-gruut_lang_en==2.0.1
-gruut_lang_es==2.0.1
-gruut_lang_fr==2.0.2
+gruut-lang-de==2.0.1
+gruut-lang-en==2.0.1
+gruut-lang-es==2.0.1
+gruut-lang-fr==2.0.2
 h11==0.16.0
 hangul-romanize==0.1.0
 hf-xet==1.1.4
@@ -66,14 +74,31 @@ httpx==0.28.1
 huggingface-hub==0.33.0
 identify==2.6.12
 idna==3.10
-importlib_metadata==8.7.0
 inflect==7.5.0
+ipykernel==6.29.5
+ipython==9.3.0
+ipython_pygments_lexers==1.1.1
+isoduration==20.11.0
 itsdangerous==2.2.0
 jamo==0.4.1
+jedi==0.19.2
 jieba==0.42.1
 Jinja2==3.1.6
 joblib==1.5.1
+json5==0.12.0
 jsonlines==1.2.0
+jsonpointer==3.0.0
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
+jupyter-events==0.12.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+jupyter_server==2.16.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.4.3
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
 kiwisolver==1.4.8
 langcodes==3.5.0
 language_data==1.3.0
@@ -85,50 +110,63 @@ Markdown==3.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.10.3
+matplotlib-inline==0.1.7
 mdurl==0.1.2
+mistune==3.1.3
 more-itertools==10.7.0
 mpmath==1.3.0
 msgpack==1.1.1
-multidict==6.4.4
+multidict==6.5.0
 multiprocess==0.70.16
 murmurhash==1.0.13
-networkx==3.5
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==2.8.8
 nltk==3.9.1
 nodeenv==1.9.1
+notebook_shim==0.2.4
 num2words==0.5.14
 numba==0.61.2
 numpy==1.26.4
-nvidia-cublas-cu12==12.4.5.8
-nvidia-cuda-cupti-cu12==12.4.127
-nvidia-cuda-nvrtc-cu12==12.4.127
-nvidia-cuda-runtime-cu12==12.4.127
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.1.3
+nvidia-cublas-cu12==12.6.4.1
+nvidia-cuda-cupti-cu12==12.6.80
+nvidia-cuda-nvrtc-cu12==12.6.77
+nvidia-cuda-runtime-cu12==12.6.77
+nvidia-cudnn-cu12==9.5.1.17
+nvidia-cufft-cu12==11.3.0.4
 nvidia-cufile-cu12==1.11.1.6
-nvidia-curand-cu12==10.3.5.147
-nvidia-cusolver-cu12==11.6.1.9
-nvidia-cusparse-cu12==12.3.1.170
-nvidia-cusparselt-cu12==0.6.2
-nvidia-nccl-cu12==2.21.5
-nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.4.127
-omegaconf==2.3.0
-onnx==1.18.0
+nvidia-curand-cu12==10.3.7.77
+nvidia-cusolver-cu12==11.7.1.2
+nvidia-cusparse-cu12==12.5.4.2
+nvidia-cusparselt-cu12==0.6.3
+nvidia-nccl-cu12==2.26.2
+nvidia-nvjitlink-cu12==12.6.85
+nvidia-nvtx-cu12==12.6.77
 orjson==3.10.18
 outcome==1.3.0.post0
+overrides==7.7.0
 packaging==25.0
 pandas==1.5.3
+pandocfilters==1.5.1
+parso==0.8.4
+pexpect==4.9.0
 pillow==11.2.1
 platformdirs==4.3.8
 pooch==1.8.2
 pre_commit==4.2.0
 preshed==3.0.10
+prometheus_client==0.22.1
+prompt_toolkit==3.0.51
 propcache==0.3.2
 protobuf==6.31.1
 psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
 pyarrow==20.0.0
 pycparser==2.22
-pydantic==2.11.5
+pydantic==2.11.7
 pydantic_core==2.33.2
 pydub==0.25.1
 Pygments==2.19.1
@@ -139,68 +177,79 @@ pysbd==0.3.4
 PySocks==1.7.1
 python-crfsuite==0.9.11
 python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
+python-json-logger==3.3.0
 python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.2
+pyzmq==27.0.0
+referencing==0.36.2
 regex==2024.11.6
 requests==2.32.4
-resampy==0.4.3
-resemble-perth==1.0.1
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
 rich==14.0.0
-ruff==0.11.13
-s3tokenizer==0.1.7
+rpds-py==0.25.1
+ruff==0.12.0
 safehttpx==0.1.6
 safetensors==0.5.3
 scikit-learn==1.7.0
 scipy==1.15.3
 selenium==4.33.0
-selenium-stealth==1.0.6
 semantic-version==2.10.0
+Send2Trash==1.8.3
 shellingham==1.5.4
 six==1.17.0
 smart-open==7.1.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soundfile==0.13.1
+soupsieve==2.7
 soxr==0.5.0.post1
 spacy==3.8.7
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 srsly==2.5.1
+stack-data==0.6.3
 starlette==0.46.2
 SudachiDict-core==20250515
 SudachiPy==0.6.10
-sympy==1.13.1
+sympy==1.14.0
 tensorboard==2.19.0
 tensorboard-data-server==0.7.2
+terminado==0.18.1
 thinc==8.3.4
 threadpoolctl==3.6.0
-tokenizers==0.20.3
+tinycss2==1.4.0
+tokenizers==0.21.1
 tomlkit==0.13.3
-torch==2.6.0
-torchaudio==2.6.0
+torch==2.7.1
+torchaudio==2.7.1
+tornado==6.5.1
 tqdm==4.67.1
 trainer==0.0.36
-transformers==4.46.3
+traitlets==5.14.3
+transformers==4.52.4
 trio==0.30.0
 trio-websocket==0.12.2
-triton==3.2.0
+triton==3.3.1
 TTS==0.22.0
-typeguard==4.4.3
+typeguard==4.4.2
 typer==0.16.0
+types-python-dateutil==2.9.0.20250516
 typing-inspection==0.4.1
 typing_extensions==4.13.2
 tzlocal==5.3.1
 umap-learn==0.5.7
-undetected-chromedriver==3.5.5
 Unidecode==1.4.0
+uri-template==1.3.0
 urllib3==2.4.0
 uvicorn==0.34.3
 virtualenv==20.31.2
 wasabi==1.1.3
+wcwidth==0.2.13
 weasel==0.4.1
-webdriver-manager==4.0.2
+webcolors==24.11.1
+webencodings==0.5.1
 websocket-client==1.8.0
 websockets==15.0.1
 Werkzeug==3.1.3
@@ -208,5 +257,3 @@ wrapt==1.17.2
 wsproto==1.2.0
 xxhash==3.5.0
 yarl==1.20.1
-yt-dlp==2025.6.9
-zipp==3.23.0
