updated the next.js front end and added it to connect to the backend all dockerized for scalability

--- a/front_end/jfrontend/Dockerfile
+++ b/front_end/jfrontend/Dockerfile
@@ -1,16 +1,37 @@
-# Multi-stage build for production optimization
-FROM node:18-alpine AS base
-
-FROM base AS deps
-RUN apk add --no-cache libc6-compat
+# 1. Install dependencies
+FROM node:20-alpine AS deps
 WORKDIR /app
-COPY package.json package-lock.json ./
-RUN npm ci --omit=dev
 
-FROM base AS builder
+COPY package.json package-lock.json* pnpm-lock.yaml* ./
+
+RUN \
+  if [ -f package-lock.json ]; then npm ci; \
+  elif [ -f pnpm-lock.yaml ]; then \
+    npm install -g pnpm && pnpm install --frozen-lockfile; \
+  else npm install; fi
+
+# 2. Build app
+FROM node:20-alpine AS builder
 WORKDIR /app
+
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
-RUN npm run dev
+
+RUN npm run build
+
+# 3. Run app
+FROM node:20-alpine AS runner
+WORKDIR /app
+
+ENV NODE_ENV=production
+ENV PORT=3000
+
+COPY --from=builder /app/.next ./.next
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/package.json ./package.json
+
+EXPOSE 3000
+
+CMD ["npm", "run", "start", "--", "-p", "3000"]
 
 
