--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,35 +1,24 @@
+#version: "3.9"
+
 services:
- 
-
-  frontend:
-    build:
-      context: ./front_end
-      dockerfile: Dockerfile
-    container_name: frontend
-    networks:
-      - ollama-n8n-network
-    restart: unless-stopped
-
-
   nginx:
     image: nginx:alpine
     container_name: nginx-proxy
+    restart: unless-stopped
     ports:
       - "9000:80"
     volumes:
+      # keep using your custom config
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-      - frontend
     networks:
       - ollama-n8n-network
-    restart: unless-stopped
+
+networks:
+  ollama-n8n-network:
+    external: true      # <-- Compose will *not* create it, you will
+
 
 
 volumes:
   ollama:
   n8n_data:
-
-networks:
-  ollama-n8n-network:
-    name: ollama-n8n-network
-    driver: bridge
