--- a/front_end/jfrontend/Dockerfile
+++ b/front_end/jfrontend/Dockerfile
@@ -23,10 +23,11 @@ RUN npm run build
 FROM node:20-alpine AS runner
 WORKDIR /app
 
-ENV NODE_ENV=production
-ENV PORT=3000
 
-COPY --from=builder /app/.next ./.next
+
+# Copy built files and production dependencies from the builder stage
+COPY --from=builder /app/.next .next
+#COPY --from=builder /app/public ./public
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/package.json ./package.json
 
