added a versus mode in the front end

--- a/bare-bones/docker-compose.yaml
+++ b/bare-bones/docker-compose.yaml
@@ -1,15 +1,16 @@
- 
+version: '3.8'
 
 services:
   backend:
     build:
-      context: ./python_back_end
+      context: ./backe_end
       dockerfile: Dockerfile
     container_name: backend
     ports:
       - "8000:8000"
     networks:
       - webnet
+      - ollama-n8n-network  # 👈 so it can talk to Ollama
     restart: unless-stopped
 
   frontend:
@@ -17,6 +18,8 @@ services:
       context: ./front_end
       dockerfile: Dockerfile
     container_name: frontend
+    expose:
+      - "8089"
     networks:
       - webnet
     restart: unless-stopped
@@ -35,6 +38,33 @@ services:
       - webnet
     restart: unless-stopped
 
+  ollama:
+    image: ollama/ollama:latest
+    container_name: ollama
+    ports:
+      - "11434:11434"
+    volumes:
+      - ollama:/root/.ollama
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
+    environment:
+      - NVIDIA_VISIBLE_DEVICES=all
+      - OLLAMA_FLASH_ATTENTION=1
+    networks:
+      - ollama-n8n-network
+    tty: true
+    restart: unless-stopped
+
 networks:
   webnet:
     driver: bridge
+  ollama-n8n-network:
+    driver: bridge
+
+volumes:
+  ollama:
