--- a/front_end/jfrontend/Dockerfile
+++ b/front_end/jfrontend/Dockerfile
@@ -27,7 +27,7 @@ WORKDIR /app
 
 # Copy built files and production dependencies from the builder stage
 COPY --from=builder /app/.next .next
-#COPY --from=builder /app/public ./public
+COPY --from=builder /app/public ./public
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/package.json ./package.json
 
