--- a/front_end/jfrontend/Dockerfile
+++ b/front_end/jfrontend/Dockerfile
@@ -32,6 +32,7 @@ COPY --from=builder /app/.next .next
 COPY --from=builder /app/public ./public
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/package.json ./package.json
+# updated
 
 EXPOSE 3000
 
