--- a/python_back_end/Dockerfile
+++ b/python_back_end/Dockerfile
@@ -8,13 +8,7 @@ WORKDIR /app
 
 # ─────────────────────────────────────────────────────────────
 # ✅ Install system dependencies
-RUN apt-get update && apt-get install -y \
-    curl \
-    build-essential \
-    libgl1 \
-    ffmpeg \
-    git \
-    && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y     curl     build-essential     libgl1     ffmpeg     git     tesseract-ocr     tesseract-ocr-eng     && rm -rf /var/lib/apt/lists/*
 
 # ─────────────────────────────────────────────────────────────
 # ✅ Install Python dependencies
