--- a/front_end/jfrontend/package.json
+++ b/front_end/jfrontend/package.json
@@ -10,19 +10,20 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.26.10",
-    "brace-expansion": "^2.0.2",
-    "cross-spawn": "^7.0.5",
+    "@google/generative-ai": "^0.14.1",
     "@radix-ui/react-slot": "^1.2.3",
+    "brace-expansion": "^2.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cross-spawn": "^7.0.5",
     "framer-motion": "^10.16.16",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.294.0",
     "next": "^14.2.30",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7",
-    "@google/generative-ai": "^0.14.1"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "20.19.2",
