--- a/python_back_end/requirements.txt
+++ b/python_back_end/requirements.txt
@@ -11,11 +11,12 @@ transformers==4.46.3
 chatterbox-tts
 soundfile
 git+https://github.com/openai/whisper.git
+perth
 # Image and OCR
 Pillow
 requests
 pytesseract
-
+librosa==0.11.0
 google-generativeai
 
 # Extra
