--- a/front_end/jfrontend/package.json
+++ b/front_end/jfrontend/package.json
@@ -22,6 +22,7 @@
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.294.0",
     "next": "^14.2.30",
+    "ogl": "^1.0.11",
     "react": "^18",
     "react-dom": "^18",
     "socket.io-client": "^4.8.1",
