--- a/nginx.conf
+++ b/nginx.conf
@@ -51,6 +51,8 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
+            proxy_set_header Cookie $http_cookie;
         }
 
         # ==== Serve audio files from temp directory ====
