--- a/python_back_end/requirements.txt
+++ b/python_back_end/requirements.txt
@@ -6,7 +6,8 @@ passlib[bcrypt]==1.7.4
 python-jose[cryptography]==3.3.0
 bcrypt==4.0.1
 requests
-torch
+# torch is installed separately with CUDA support in Dockerfile
+# torch==2.6.0+cu124
 soundfile
 whisper
 pydantic
