--- a/python_back_end/Dockerfile
+++ b/python_back_end/Dockerfile
@@ -7,7 +7,7 @@ FROM nvidia/cuda:12.4.1-runtime-ubuntu22.04
 # 🐧 OS packages
 ############################
 RUN apt-get update && apt-get install -y \
-      git build-essential curl ping libgl1 ffmpeg tesseract-ocr tesseract-ocr-eng \
+      git build-essential curl libgl1 ffmpeg tesseract-ocr tesseract-ocr-eng \
       python3 python3-pip \
     && rm -rf /var/lib/apt/lists/*
 
