--- a/.github/workflows/zap-dast.yaml
+++ b/.github/workflows/zap-dast.yaml
@@ -60,18 +60,21 @@ jobs:
         run: |
           docker pull dulc3/jarvis-backend:latest
           
-          # Assuming your backend needs database connection
+          # Run backend with proper port exposure
           docker run -d --rm \
             --name jarvis-backend \
             --network ollama-n8n-network \
             -e DATABASE_URL=postgresql://pguser:pgpassword@pgsql-db:5432/database \
             -e NODE_ENV=production \
+            -p 8080:8080 \
             dulc3/jarvis-backend:latest
           
-          # Wait for backend to be ready (adjust the health check URL as needed)
+          # Wait for backend to be ready
           echo "Waiting for backend to start..."
           for i in {1..30}; do
-            if docker exec jarvis-backend curl -s http://localhost:8080/health > /dev/null 2>&1; then
+            if curl -f -s http://localhost:8080 > /dev/null 2>&1 || \
+               curl -f -s http://localhost:8080/health > /dev/null 2>&1 || \
+               curl -f -s http://localhost:8080/api > /dev/null 2>&1; then
               echo "Backend is ready!"
               break
             fi
@@ -87,12 +90,13 @@ jobs:
             --name jarvis-frontend \
             --network ollama-n8n-network \
             -e REACT_APP_API_URL=http://jarvis-backend:8080 \
+            -p 3000:3000 \
             dulc3/jarvis-frontend:latest
           
           # Wait for frontend to be ready
           echo "Waiting for frontend to start..."
           for i in {1..30}; do
-            if docker exec jarvis-frontend curl -s http://localhost:3000 > /dev/null 2>&1; then
+            if curl -f -s http://localhost:3000 > /dev/null 2>&1; then
               echo "Frontend is ready!"
               break
             fi
@@ -102,6 +106,46 @@ jobs:
           
       - name: Start Nginx Proxy
         run: |
+          # Debug: Check if nginx.conf exists
+          if [ ! -f "nginx.conf" ]; then
+            echo "nginx.conf not found in repository root. Creating a basic one..."
+            cat > nginx.conf << 'EOF'
+          events {
+              worker_connections 1024;
+          }
+          
+          http {
+              upstream frontend {
+                  server jarvis-frontend:3000;
+              }
+              
+              upstream backend {
+                  server jarvis-backend:8080;
+              }
+              
+              server {
+                  listen 80;
+                  
+                  location / {
+                      proxy_pass http://frontend;
+                      proxy_set_header Host $host;
+                      proxy_set_header X-Real-IP $remote_addr;
+                      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                      proxy_set_header X-Forwarded-Proto $scheme;
+                  }
+                  
+                  location /api {
+                      proxy_pass http://backend;
+                      proxy_set_header Host $host;
+                      proxy_set_header X-Real-IP $remote_addr;
+                      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                      proxy_set_header X-Forwarded-Proto $scheme;
+                  }
+              }
+          }
+          EOF
+          fi
+          
           # Use the nginx.conf from your repository
           docker run -d --rm \
             --name nginx-proxy \
@@ -110,13 +154,25 @@ jobs:
             -v $(pwd)/nginx.conf:/etc/nginx/nginx.conf:ro \
             nginx:alpine
           
-          # Wait for nginx to be ready
+          # Wait for nginx to be ready with timeout
           echo "Waiting for Nginx proxy..."
-          until curl -s http://localhost:9000 > /dev/null; do
-            echo "Waiting for proxy..."
+          for i in {1..30}; do
+            if curl -f -s http://localhost:9000 > /dev/null 2>&1; then
+              echo "Nginx proxy is ready!"
+              break
+            fi
+            echo "Waiting for proxy... ($i/30)"
             sleep 2
           done
-          echo "Nginx proxy is ready!"
+          
+          # Check if nginx started successfully
+          if ! curl -f -s http://localhost:9000 > /dev/null 2>&1; then
+            echo "Nginx failed to start. Checking logs..."
+            docker logs nginx-proxy
+            echo "Checking nginx configuration..."
+            docker exec nginx-proxy nginx -t
+            exit 1
+          fi
           
       - name: Verify All Services
         run: |
