--- a/front_end/jfrontend/package.json
+++ b/front_end/jfrontend/package.json
@@ -38,6 +38,7 @@
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "textarea": "^0.3.0",
+    "uuid": "^11.1.0",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
@@ -47,6 +48,7 @@
     "@types/pg": "^8.15.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "^14.0.4",
