--- a/python_back_end/Dockerfile
+++ b/python_back_end/Dockerfile
@@ -7,9 +7,9 @@ FROM nvidia/cuda:12.4.1-runtime-ubuntu22.04
 # 🐧 OS packages
 ############################
 RUN apt-get update && apt-get install -y \
-      git build-essential curl libgl1 ffmpeg tesseract-ocr tesseract-ocr-eng \
-      python3 python3-pip \
-    && rm -rf /var/lib/apt/lists/*
+  build-essential curl libgl1 ffmpeg tesseract-ocr tesseract-ocr-eng \
+  python3 python3-pip \
+  && rm -rf /var/lib/apt/lists/*
 
 ############################
 # 🐍 Python deps
@@ -21,10 +21,10 @@ RUN pip install --no-cache-dir --upgrade pip setuptools wheel
 
 # Install PyTorch first (specific CUDA version) to avoid conflicts
 RUN pip install --no-cache-dir \
-      torch==2.6.0+cu124 \
-      torchvision==0.21.0+cu124 \
-      torchaudio==2.6.0 \
-      --index-url https://download.pytorch.org/whl/cu124
+  torch==2.6.0+cu124 \
+  torchvision==0.21.0+cu124 \
+  torchaudio==2.6.0 \
+  --index-url https://download.pytorch.org/whl/cu124
 
 # Create requirements without torch to avoid conflicts
 RUN grep -v "^torch" requirements.txt > requirements_no_torch.txt
@@ -34,9 +34,17 @@ COPY install_deps.py .
 
 # Install remaining requirements using robust Python script with fallback
 RUN python3 install_deps.py || \
-    (echo "Python script failed, falling back to traditional method..." && \
-     pip install --no-cache-dir -r requirements_no_torch.txt && \
-     pip install --no-cache-dir -r requirements_no_torch.txt)  
+  (echo "Python script failed, falling back to traditional method..." && \
+  pip install --no-cache-dir -r requirements_no_torch.txt && \
+  pip install --no-cache-dir -r requirements_no_torch.txt)  
+
+# Add this section after your OS packages installation
+############################
+# 👤 Create non-root user
+############################
+RUN useradd -m -u 1001 -s /bin/bash appuser
+WORKDIR /app
+USER appuser
 
 ############################
 # 📦 Copy app code
@@ -48,9 +56,9 @@ COPY . .
 # 🚀 Pre-warm models into Hugging Face cache (BuildKit required!)
 ############################
 RUN --mount=type=cache,id=model-cache,target=/root/.cache \
-    set -eux; \
-    python3 -c 'import whisper'; \
-    python3 -c 'from chatterbox.tts import ChatterboxTTS; ChatterboxTTS.from_pretrained(device="cpu")'
+  set -eux; \
+  python3 -c 'import whisper'; \
+  python3 -c 'from chatterbox.tts import ChatterboxTTS; ChatterboxTTS.from_pretrained(device="cpu")'
 
 ############################
 # 🌐 Expose + launch
