--- a/nginx.conf
+++ b/nginx.conf
@@ -55,6 +55,16 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # Vibecoding API routes (must go through frontend for JWT processing)
+        location /api/vibecoding/ {
+            proxy_pass http://frontend:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         # ==== Handle frontend ====
         location / {
             proxy_pass http://frontend:3000;
