--- a/nginx.conf
+++ b/nginx.conf
@@ -55,6 +55,19 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # Vibecoding WebSocket terminal (direct to backend)
+        location ~ ^/api/vibecoding/container/([^/]+)/terminal$ {
+            proxy_pass http://backend:8000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 86400;
+        }
+
         # Vibecoding API routes (must go through frontend for JWT processing)
         location /api/vibecoding/ {
             proxy_pass http://frontend:3000;
