--- a/front_end/jfrontend/package.json
+++ b/front_end/jfrontend/package.json
@@ -31,6 +31,8 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.294.0",
     "monaco-editor": "^0.52.2",
+    "monaco-languageclient": "^9.9.0",
+    "monaco-languageserver-types": "^0.4.0",
     "next": "^14.2.30",
     "ogl": "^1.0.11",
     "pg": "^8.16.3",
@@ -43,6 +45,7 @@
     "tailwindcss-animate": "^1.0.7",
     "textarea": "^0.3.0",
     "uuid": "^11.1.0",
+    "vscode-languageserver-protocol": "^3.17.5",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
