--- a/harvis-helm-chart/templates/configmaps.yaml
+++ b/harvis-helm-chart/templates/configmaps.yaml
@@ -46,7 +46,7 @@ data:
     # Ensure the database exists (this should be automatic with POSTGRES_DB env var)
     # But let's verify it exists and create if not
     psql -v ON_ERROR_STOP=1 --username "$POSTGRES_USER" --dbname "postgres" <<-EOSQL
-        SELECT 'CREATE DATABASE $POSTGRES_DB'
+        SELECT 'CREATE DATABASE "'$POSTGRES_DB'"'
         WHERE NOT EXISTS (SELECT FROM pg_database WHERE datname = '$POSTGRES_DB')\gexec
     EOSQL
     
