--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -26,7 +26,19 @@ jobs:
 
       - name: 📦 Install Python dependencies + Bandit
         run: |
+          # Install build dependencies first to handle pkuseg/chatterbox-tts
+          pip install numpy setuptools wheel Cython
+
+          # Install PyTorch to avoid conflicts
+          pip install torch==2.6.0 torchaudio==2.6.0
+
+          # Install pkuseg with pre-installed numpy (needed by chatterbox-tts)
+          pip install pkuseg==0.0.25 --no-build-isolation
+
+          # Install remaining requirements
           pip install -r requirements.txt
+
+          # Install security scanning tool
           pip install bandit
 
       - name: 🔐 Run Bandit Security Scan
