updated research mode

--- a/python_back_end/Dockerfile
+++ b/python_back_end/Dockerfile
@@ -59,13 +59,10 @@ WORKDIR /app
 COPY . .
 
 ############################
-# 🎯 Pre-seed Whisper models for offline operation
+# 🎯 Whisper cache setup (models downloaded at runtime)
 ############################
 USER root
-RUN mkdir -p /root/.cache/whisper
-COPY ./whisper_models/tiny.pt /root/.cache/whisper/tiny.pt
-COPY ./whisper_models/base.pt /root/.cache/whisper/base.pt
-RUN chown -R appuser:appuser /root/.cache
+RUN mkdir -p /root/.cache/whisper && chown -R appuser:appuser /root/.cache
 USER appuser
 
 ############################
