updated flux error

--- a/harvis-helm-chart/templates/merged-ollama-backend-deployment.yaml
+++ b/harvis-helm-chart/templates/merged-ollama-backend-deployment.yaml
@@ -70,7 +70,15 @@ spec:
               protocol: TCP
           env:
             - name: DATABASE_URL
-              value: "postgresql://{{ .Values.postgresql.auth.username }}:{{ .Values.postgresql.auth.password }}@{{ include "harvis-ai.fullname" . }}-pgsql:5432/{{ .Values.postgresql.auth.database }}"
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "harvis-ai.fullname" . }}-backend-secret
+                  key: database-url
+            - name: OLLAMA_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "harvis-ai.fullname" . }}-backend-secret
+                  key: ollama-api-key
             - name: OLLAMA_URL
               value: "http://localhost:11434"
             - name: BACKEND_URL
