--- a/harvis-helm-chart/values.yaml
+++ b/harvis-helm-chart/values.yaml
@@ -5,55 +5,23 @@
 # Global configuration
 global:
   namespace: ai-agents
-  storageClass: ""  # Use default storage class
 
 # Backend configuration
 backend:
   enabled: false  # Using merged deployment instead
   env:
-    # Secrets will be provided via external secrets or at deployment time
-    # Do not commit actual secret values to Git!
-    JWT_SECRET: ""  # Will be set via --set flag or external secret
-    OLLAMA_CLOUD_URL: "https://coyotegpt.ngrok.app/ollama"
-    OLLAMA_API_KEY: ""  # Will be set via --set flag or external secret
-    OPENAI_API_KEY: ""  # Will be set via --set flag or external secret
-  image:
-    repository: dulc3/jarvis-backend
-    tag: latest
-    pullPolicy: Always
-  resources:
-    requests:
-      cpu: 250m
-      memory: 1Gi
-    limits:
-      cpu: 1000m
-      memory: 2Gi
-  persistence:
-    enabled: false  # Backend persistence disabled since using merged deployment
-    size: 5Gi
-    storageClass: ""
-    accessMode: ReadWriteOnce
+    JWT_SECRET: ""
+    OLLAMA_CLOUD_URL: "https://coyotegpt.ngrok.app"
+    OLLAMA_API_KEY: ""
+    OPENAI_API_KEY: ""
 
 # Merged Ollama + Backend deployment configuration
 mergedOllamaBackend:
   enabled: true
-  # Ollama container configuration
-  ollama:
-    image:
-      repository: ollama/ollama
-      tag: latest
-      pullPolicy: IfNotPresent
-    resources:
-      requests:
-        cpu: 500m
-        memory: 2Gi
-      limits:
-        cpu: 1000m
-        memory: 4Gi
-    models:
-      - mistral
-      - codellama
-  # Overall resource configuration (GPU allocation)
+  image:
+    repository: dulc3/jarvis-backend
+    tag: dev
+    pullPolicy: Always
   resources:
     requests:
       cpu: 500m
@@ -67,8 +35,6 @@ mergedOllamaBackend:
   service:
     type: ClusterIP
     port: 8000
-  persistence:
-    existingClaim: ""  # Use default claim name if empty
 
 # Frontend configuration
 frontend:
@@ -78,12 +44,9 @@ frontend:
     tag: dev
     pullPolicy: Always
   env:
-    # Secrets will be provided via external secrets or at deployment time
-    JWT_SECRET: ""  # Will be set via --set flag or external secret
+    JWT_SECRET: " "
     NODE_ENV: "production"
     NEXT_TELEMETRY_DISABLED: "1"
-  build:
-    enabled: false  # Disable build init container - use pre-built images
   service:
     type: ClusterIP
     port: 3000
@@ -104,8 +67,7 @@ postgresql:
     pullPolicy: IfNotPresent
   auth:
     username: pguser
-    # Password will be provided via external secrets or at deployment time
-    password: ""  # Will be set via --set flag or external secret
+    password: pgpassword
     database: database
   initdbArgs: "-E UTF8 --locale=C"
   service:
@@ -132,11 +94,7 @@ n8n:
     tag: latest
     pullPolicy: Always
   auth:
-    # Basic auth configuration
-    basicAuthActive: "true"
-    basicAuthUser: "admin"
-    # Password will be provided via external secrets or at deployment time
-    basicAuthPassword: ""  # Will be set via --set flag or external secret
+    basicAuthPassword: "admin123"
   env:
     N8N_PERSONAL_API_KEY: ""
     DB_TYPE: "postgresdb"
@@ -144,7 +102,7 @@ n8n:
     DB_POSTGRESDB_PORT: "5432"
     DB_POSTGRESDB_DATABASE: "n8n"
     DB_POSTGRESDB_USER: "pguser"
-    DB_POSTGRESDB_PASSWORD: ""  # Will be set via --set flag or external secret
+    DB_POSTGRESDB_PASSWORD: "pgpassword"
     N8N_BASIC_AUTH_ACTIVE: "true"
     N8N_BASIC_AUTH_USER: "admin"
     WEBHOOK_URL: "https://n8n.dulc3.tech/"
@@ -173,7 +131,7 @@ nginx:
     tag: alpine
     pullPolicy: IfNotPresent
   service:
-    type: LoadBalancer
+    type: ClusterIP
     port: 80
   resources:
     requests:
@@ -194,11 +152,7 @@ ingress:
     nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
   tls:
-    - secretName: harvis-tls-cert
-      hosts:
-        - harvis.dulc3.tech
-        - harvis-api.dulc3.tech
-        - n8n.dulc3.tech
+    enabled: true
   hosts:
     - host: harvis.dulc3.tech
       paths:
